--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,8 @@
     <link rel="stylesheet" href="{% static "plugins/picedit/css/picedit.min.css" %}">
     <!--Sweet Alert-->
     <link rel="stylesheet" href="{% static "plugins/swal/sweetalert.css" %}">
+    <!--Bootstrap Slider-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.5.3/css/bootstrap-slider.min.css" />
     <link rel="manifest" href="/manifest.json">
 
     <style>
@@ -575,6 +577,8 @@
     <script src="{% static "dist/js/demo.js" %}"></script>
     <!--Sweet alert-->
     <script src="{% static "plugins/swal/sweetalert.min.js" %}"></script>
+    <!--Bootstrap Slider-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.5.3/bootstrap-slider.min.js"></script>
     <script type="text/javascript">
         var convertEmojis = function (single) {
             emojione.imageType = 'svg';
