added signup id to signupinfo

--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -4,6 +4,8 @@
         <h4>{{ signup.user.username }}</h4>
     </div>
     <hr>
+    <h4>ID: {{ signup.id }}</h4>
+    <hr>
     <h4>Fullname: {{ signup.user.first_name }} {{ signup.user.last_name }}</h4>
     <hr>
     <h4>Email: {{ signup.useremail }} <span class="label label-success">{% trans "Validated" %}</span></h4>
