EP-274: download blank CSV structure EP-271: Add another var in record for "previous signup" email xor number

--- a/templates/autosignup/settings.html
+++ b/templates/autosignup/settings.html
@@ -91,6 +91,7 @@
                                 <input type="file" name="csv" value="" placeholder="Upload a new csv" class="file">
                                 <input type="checkbox" name="fetch_twilio" value=""> {% trans "Fetch Twilio Data" %}
                             </form>
+                            <a href="{% static "dist/files/membercsv_example.csv" %}">{% trans "Download example copy" %}</a>
                         </div>
                     </div>
                     <div class="row">
