--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -52,6 +52,8 @@
     <h4>Uploaded image:</h4>
     <img src="{{ signup.userimage.url }}" width="400" height="400" />
     <hr>
+    <h4>Image Data: {{ signup.image_gps_metadata }}</h4>
+    <hr>
     {% endif %}
     <h4>Info from User Data Base</h4>
     <blockquote>
