EBR-94: Update default autosignup approval email

--- a/templates/autosignup/email_approved.html
+++ b/templates/autosignup/email_approved.html
@@ -1,5 +1,5 @@
-<h4>You are approved for Grantcoin Account </h4>
+<h4>You have been approved a Grantcoin account.</h4>
 <p>
     Hello {{ username }}, Greetings from Ekata!!
-    Grantcoin approved your signup for their account
+    Grantcoin Foundation has approved your signup for a Grantcoin Account.
 </p>
