EBR-95: Automated Autosignup referral code upon account approval EBR-96: Referral code parsing tag for approval email EBR-97: Change Invite key input form text.

--- a/templates/autosignup/email_approved.html
+++ b/templates/autosignup/email_approved.html
@@ -1,5 +1,8 @@
 <h4>You have been approved a Grantcoin account.</h4>
 <p>
-    Hello {{ username }}, Greetings from Ekata!!
+    Hello {{ username }}, Greetings from Ekata!!.<br>
     Grantcoin Foundation has approved your signup for a Grantcoin Account.
+</p>
+<p>
+    Referral Code: {{ referral_code }}
 </p>
