--- a/templates/invitationsystem/checkinvitation.html
+++ b/templates/invitationsystem/checkinvitation.html
@@ -25,7 +25,7 @@
                                     {{ form|as_bootstrap }}
                                     <button type="submit" name="button" class="btn btn-primary">{% trans "Submit" %}</button>
                                 </form>
-                                <a style="color: #fff; margin-top:20px;" href="{% url 'invitationsystem:index' %}">Click here to get an invitation id</a>
+                                <a style="color: #fff; margin-top:20px;" href="{% url 'invitationsystem:index' %}">Click here if you need an invite key</a>
                             {% endif %}
                         </div>
                     </div>
