Added zip code to signupinfo template

--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -74,6 +74,9 @@
             <p>
                 Country: {{ address.country }}
             </p>
+            <p>
+                Zip Code: {{ address.zip_code }}
+            </p>
         </blockquote>
         <hr>
         {% endif %}
@@ -96,6 +99,9 @@
             </p>
             <p>
                 Country: {{ address.country }}
+            </p>
+            <p>
+                Zip Code: {{ address.zip_code }}
             </p>
         </blockquote>
         <hr>
@@ -125,6 +131,9 @@
             </p>
             <p>
                 Country: {{ address.country }}
+            </p>
+            <p>
+                Zip Code: {{ address.zip_code }}
             </p>
         </blockquote>
         <hr>
