--- a/templates/autosignup/signupinfo.html
+++ b/templates/autosignup/signupinfo.html
@@ -81,7 +81,7 @@
                 Latitude: {{ address.latitude }}
             </p>
             <p>
-                Latitude: {{ address.longitude }}
+                Longitude: {{ address.longitude }}
             </p>
         </blockquote>
         <hr>
@@ -113,7 +113,7 @@
                 Latitude: {{ address.latitude }}
             </p>
             <p>
-                Latitude: {{ address.longitude }}
+                Longitude: {{ address.longitude }}
             </p>
         </blockquote>
         {% if signup.distance_db_vs_twilio %}
@@ -151,7 +151,7 @@
                 Latitude: {{ address.latitude }}
             </p>
             <p>
-                Latitude: {{ address.longitude }}
+                Longitude: {{ address.longitude }}
             </p>
         </blockquote>
         <hr>
