EBR-99: Flag mobile no if matches another member account EBR-100: Update email confirmation webmaster@localhost EBR-101: CSV Referral code did not copy EBR-102: Referral code entered twice then Server Error 500 EBR-103: update html parser logic for {{ username }} EBR-104: Duplicate key value violation server error 500 EBR-105: Invitation Email keys are not working.

--- a/templates/autosignup/email_approved.html
+++ b/templates/autosignup/email_approved.html
@@ -1,6 +1,6 @@
 <h4>You have been approved a Grantcoin account.</h4>
 <p>
-    Hello {{ username }}, Greetings from Ekata!!.<br>
+    Hello {{ gc_name }}, Greetings from Ekata!!.<br>
     Grantcoin Foundation has approved your signup for a Grantcoin Account.
 </p>
 <p>
