removed minor bugs

--- a/templates/autosignup/settings.html
+++ b/templates/autosignup/settings.html
@@ -132,7 +132,7 @@
                                             </td>
                                             <td>
                                                 {% if membercsv.failed_csv %}
-                                                    <a href="{{ MEDIA_URL }}{{ membercsv.failed_csv.path }}">failed.csv</a>
+                                                    <a href="{{ MEDIA_URL }}{{ membercsv.failed_csv.url }}">failed.csv</a>
                                                 {% endif %}
                                             </td>
                                        </tr>
