--- a/templates/base.html
+++ b/templates/base.html
@@ -574,6 +574,8 @@
     <script src="{% static "plugins/swal/sweetalert.min.js" %}"></script>
     <!--Bootstrap Slider-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.5.3/bootstrap-slider.min.js"></script>
+    <!-- File Saver -->
+    <script src="{% static "plugins/filesaver/FileSaver.min.js" %}"></script>
     <script type="text/javascript">
         var convertEmojis = function (single) {
             emojione.imageType = 'svg';
