CSV invitation email changed

--- a/templates/invitationsystem/csvinvitationemail.html
+++ b/templates/invitationsystem/csvinvitationemail.html
@@ -41,6 +41,13 @@
 								</tr>
 								<tr>
 									<td style="padding: 0; margin: 0" valign="top">
+									<p style="text-align: center;">&nbsp;</p>
+
+									<p style="text-align: center;">Welcome to Ekata {{ gc_name }}</p>
+
+									<p><br />
+									<img alt="" src="https://beta.ekata.social/media/ckeditor/2016/12/14/grantcoin.png" style="width: 64px; height: 64px; float: left; border-width: 10px; border-style: none; margin-right: 10px" />You are receiving this email with your login credentials because you are registered with the Grantcoin Foundation on the Ekata Social platform. This is a new web platform they will be using to manage signups and member accounts.</p>
+
 									<table border="0" cellpadding="0" cellspacing="0" style="color: #717171; font: normal 11px Georgia, serif; margin: 0; padding: 0;" width="620">
 										<tbody>
 											<tr>
@@ -52,11 +59,13 @@
 												<td style="padding: 15px 0 15px; border-bottom: 1px solid #d2b49b;" valign="top">&nbsp;
 												<p>Instructions to join:</p>
 
-												<p>1. Use Username: {{ username }} and Password: {{ password }} to login </p>
+												<p>1. Go to the Ekata Login page at this link: <a href="https://beta.ekata.social/en/accounts/login/">https://beta.ekata.social/en/accounts/login/</a></p>
 
-												<p>2.&nbsp;When site asks for invitation key, use your one time access key.</p>
+												<p>3. Use Username: {{ username }} and Password: {{ password }} to login</p>
 
-												<p>3. Any issues contact <a href="mailto:support@ekata.social?subject=Invitation%20Issue&amp;body=I'm having difficulty getting setup, please help.">support</a></p>
+												<p>4.&nbsp;When site asks for invitation key, use your one time invite key to activate your account.</p>
+
+												<p>5. Any issues with login contact <a href="mailto:support@ekata.social?subject=Invitation%20Issue&amp;body=I'm having difficulty getting setup, please help.">support</a></p>
 												</td>
 											</tr>
 										</tbody>
